--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+	<link rel="stylesheet" href="styles.css" />
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -17,15 +19,23 @@
 <body>
 
   <!-- Rating state start -->
+  <main>
+    <div class="how">
+      How did we do?
+    </div>
+    <div class="desc">
+      Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+    </div>
+    <div>
+        1 2 3 4 5
+    </div>
+    <button>Submit
+    </button>
+  </main>
 
-  How did we do?
+  
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
 
-  1 2 3 4 5
-
-  Submit
 
   <!-- Rating state end -->
 
