--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		/>
 
 		<link rel="stylesheet" href="styles.css" />
-
 		<title>Frontend Mentor | Interactive rating component</title>
 
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -30,17 +29,20 @@
 	<body>
 		<!-- Rating state start -->
 		<main>
-			<div class="card">
+			<div id="card">
 				<div class="how">How did we do?</div>
 				<div class="desc">
 					Please let us know how we did with your support request. All feedback
 					is appreciated to help us improve our offering!
 				</div>
 				<div class="rating">
-          <div class="1">1</div>
-          <div>2 3 4 5</div>
+          <div class="circle">1</div>
+          <div class="circle">2</div>
+          <div class="circle">3</div>
+          <div class="circle">4</div>
+          <div class="circle">5</div>
 			</div>
-			<button>Submit</button>
+			<button id="button">Submit</button>
 		</main>
 
 		<!-- Rating state end -->
@@ -60,5 +62,6 @@
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
 		</div>
+    <script src="myscripts.js"></script>
 	</body>
 </html>
