center submit button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<div class="circle">4</div>
 							<div class="circle">5</div>
 						</div>
-						<button id="button">Submit</button>
+						<button class="submit">Submit</button>
 					</div>
 					<!-- Rating state end -->
 
