--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 			<div class="wrapper">
 				<div id="card">
 					<!-- Rating state start -->
+					<div class="star">
+						<img src="./images/icon-star.svg" alt="Star icon">
+					</div>
 					<div id="rating">
 						<div class="how">How did we do?</div>
 						<div class="desc">
