--- a/index.html
+++ b/index.html
@@ -27,40 +27,38 @@
 		</style>
 	</head>
 	<body>
-		<main>
-			<div class="wrapper">
-				<div id="card">
-					<!-- Rating state start -->
-					<div class="star">
-						<img src="./images/icon-star.svg" alt="Star icon">
-					</div>
-					<div id="rating">
-						<div class="how">How did we do?</div>
-						<div class="desc">
-							Please let us know how we did with your support request. All
-							feedback is appreciated to help us improve our offering!
-						</div>
-						<div class="score">
-							<div class="circle">1</div>
-							<div class="circle">2</div>
-							<div class="circle">3</div>
-							<div class="circle">4</div>
-							<div class="circle">5</div>
-						</div>
-						<button class="submit">Submit</button>
-					</div>
-					<!-- Rating state end -->
-
-					<!-- Thank you state start -->
-					<div id="result">
-						<div>
-							You selected out of 5 Thank you! We appreciate you taking the time
-							to give a rating. If you ever need more support, don’t hesitate to
-							get in touch!
-						</div>
-					</div>
-					<!-- Thank you state end -->
+		<main class="wrapper">
+			<div id="card">
+				<!-- Rating state start -->
+				<div class="star">
+					<img src="./images/icon-star.svg" alt="Star icon" />
 				</div>
+				<div id="rating">
+					<div class="how">How did we do?</div>
+					<div class="desc">
+						Please let us know how we did with your support request. All
+						feedback is appreciated to help us improve our offering!
+					</div>
+					<div class="score">
+						<div class="circle">1</div>
+						<div class="circle">2</div>
+						<div class="circle">3</div>
+						<div class="circle">4</div>
+						<div class="circle">5</div>
+					</div>
+					<button class="submit">Submit</button>
+				</div>
+				<!-- Rating state end -->
+
+				<!-- Thank you state start -->
+				<div id="result">
+					<div>
+						You selected out of 5 Thank you! We appreciate you taking the time
+						to give a rating. If you ever need more support, don’t hesitate to
+						get in touch!
+					</div>
+				</div>
+				<!-- Thank you state end -->
 			</div>
 		</main>
 
