--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		/>
 
 		<link rel="stylesheet" href="styles.css" />
+
 		<title>Frontend Mentor | Interactive rating component</title>
 
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -46,7 +47,7 @@
 						<div class="circle">4</div>
 						<div class="circle">5</div>
 					</div>
-					<button class="submit">Submit</button>
+					<button class="submit" id="submit-button">Submit</button>
 				</div>
 				<!-- Rating state end -->
 
@@ -68,6 +69,7 @@
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
 		</div>
-		<script src="myscripts.js"></script>
+		<!-- <script src="myscripts.js"></script> -->
+		<script src="result.js"></script>
 	</body>
 </html>
